--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,10 +22,13 @@ if linkage != nil
 end
 
 target 'kbant' do
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
   config = use_native_modules!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
+
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -38,7 +41,7 @@ target 'kbant' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
