Add Google social login

--- a/ios/kbant/Info.plist
+++ b/ios/kbant/Info.plist
@@ -20,6 +20,23 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.422166043165-k7i5m4sn8fj1qt1ci06ninu8snet4qk4</string>
+			</array>
+		</dict>
+    <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>fb607048507958015</string>
+    </array>
+    </dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
