--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/auth": "^17.3.1",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "react": "18.2.0",
     "react-native": "0.71.3"
   },
